# aiaNextGenTech-Products

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
agents/: README.md  __init__.py  base.py
ai-agents/: agent-workflow-az-tf-migration.md  ms-foundry-namingstandard.md
ai-agents/az-tf-migration/: .env  AztfExportPS-Tool.md  README.md  TerraformRefactor-Agent.md  agent-1-MigrationOrchestrator-Agent.md  agent-3-AztfExportPS-Tool.md  agent-4-TerraformRefactor-Agent.md  agent-workflow-az-tf-migration.md  infraAzTfAssessmentAgent-v1.md
ai-agents/az-tf-migration/mcp-server/: .env  README.md  command.md  package-lock.json  package.json  server.js  validation-result-20260127-191054.json  validation-result-20260127-191627.json  validation-result-20260127-192038.json  validation-result-20260127-192443.json
ai-agents/az-tf-migration/testing-prompt/: assessment-prompt.yml
ai-agents/workflow-Yaml/: aztfworflow-initial.yaml  aztfworkflow-secon.yaml
ai-userInterface/: .gitignore
ai-userInterface/prompts/: prompt-az-product-ThreatDetection.yml  prompt-websitedesign.yml
ai-userInterface/ui-design/: GIT_NPM_COMMANDS.md  PROJECT_SUMMARY.md  README.md  SETUP.md  package.json  tailwind.config.js
ai-userInterface/ui-design/.next/: app-build-manifest.json  trace
ai-userInterface/ui-design/app/: layout.js  page.js
ai-userInterface/ui-design/context/: AppContext.js
ai-userInterface/ui-design/pages/: _app.js
ai-userInterface/ui-design/styles/: globals.css
configs/: README.md  config.example.yaml
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
examples/: README.md  base_agent_example.py  simple_agent.py
models/: README.md  __init__.py
models/prompts/: __init__.py  templates.py
tests/: README.md  conftest.py  test_utils.py
utils/: README.md  __init__.py  config.py  logging.py
(+595 files in other folders)
